[gd_scene load_steps=8 format=3 uid="uid://dcr7ngow11bqq"]

[ext_resource type="Script" path="res://KCards/scenes/menu/EditDeck.gd" id="1_jrukb"]
[ext_resource type="Texture2D" uid="uid://dap7i3bphd2hu" path="res://KCards/images/bg_buttons_picture/unlock_button.png" id="2_7vdcj"]
[ext_resource type="Texture2D" uid="uid://dkqp1aemjln4s" path="res://KCards/images/bg_buttons_picture/lock_button.png" id="3_1n6mv"]
[ext_resource type="Texture2D" uid="uid://kam5g042pbtj" path="res://KCards/images/bg_buttons_picture/k-temn.png" id="4_ed55p"]
[ext_resource type="Texture2D" uid="uid://2jtrjvrp66rg" path="res://KCards/images/bg_buttons_picture/arrow.png" id="5_vqjac"]
[ext_resource type="Texture2D" uid="uid://brs5u8coai31b" path="res://KCards/images/bg_buttons_picture/arrowDark.png" id="6_dapli"]

[sub_resource type="LabelSettings" id="LabelSettings_ybphk"]
font_size = 22
font_color = Color(0, 0, 0, 1)

[node name="ButtonsLayer2" type="CanvasLayer"]
layer = -8
script = ExtResource("1_jrukb")

[node name="Shading" type="Polygon2D" parent="."]
position = Vector2(105, 0)
scale = Vector2(0.7, 1)
color = Color(0, 0, 0, 0.541176)
polygon = PackedVector2Array(0, 0, 720, 0, 720, 480, 0, 480)

[node name="ConfirmButton" type="TextureButton" parent="."]
offset_left = 396.0
offset_top = 7.0
offset_right = 606.0
offset_bottom = 77.0
texture_normal = ExtResource("2_7vdcj")
texture_pressed = ExtResource("4_ed55p")
texture_disabled = ExtResource("3_1n6mv")

[node name="Label" type="Label" parent="ConfirmButton"]
layout_mode = 0
offset_left = 14.0
offset_top = 15.0
offset_right = 200.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "Подтвердить"
label_settings = SubResource("LabelSettings_ybphk")
horizontal_alignment = 1

[node name="LeftButton" type="TextureButton" parent="."]
offset_left = 8.0
offset_top = 208.0
offset_right = 98.0
offset_bottom = 273.0
texture_normal = ExtResource("5_vqjac")
texture_pressed = ExtResource("6_dapli")

[node name="RightButton" type="TextureButton" parent="."]
offset_left = 621.0
offset_top = 207.0
offset_right = 711.0
offset_bottom = 272.0
texture_normal = ExtResource("5_vqjac")
texture_pressed = ExtResource("6_dapli")
flip_h = true

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 117.0
offset_top = 12.0
offset_right = 363.0
offset_bottom = 43.0
placeholder_text = "Поиск..."

[connection signal="pressed" from="ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
